Remove GET /v1/hijri/months: Hijri date comes with prayer times
